# fat-contract-workshop

./: .gitignore  Cargo.toml  README.md  lib.rs
